# cpp-clob-client

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  example_approvals.cpp  example_authenticated.cpp  example_parallel.cpp  example_place_order.cpp  example_public.cpp  example_streaming_pagination.cpp  test_real_trading_simple.cpp
include/clob/: client.hpp  constants.hpp  eip712.hpp  eth_rpc.hpp  http_client.hpp  keccak.hpp  order_builder.hpp  signer.hpp  types.hpp  utilities.hpp
src/: client.cpp  constants.cpp  eip712.cpp  eth_rpc.cpp  http_client.cpp  order_builder.cpp  signer.cpp  utilities.cpp
tests/: CMakeLists.txt  cross_validate.py  test_authentication_flows.cpp  test_eip712.cpp  test_endpoints_comprehensive.cpp  test_hmac_l2.cpp  test_mock_authentication.cpp  test_mock_order_posting.cpp  test_order_builder.cpp  test_order_lifecycle.cpp  test_order_serialization.cpp  test_signer.cpp  test_utilities.cpp
